# tamfunc

./: README.md  pyproject.toml  setup.py
src/: __init__.py  tamspec.py
src/tamfunc/: __init__.py  load_cmip6.py  tamfunc.py  tamspec.py
tamfunc/: __init__.py  tamfunc.py
tamfunction/: tamfunction.py
