[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tamfunc"               
version = "0.2.0"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.13"
authors = [
  { name = "Yukito Tamura" }
]
[tool.hatch.build.targets.wheel]
packages = ["src/tamfunc", "src/tamspec", "src/tamfunc"]
dependencies = [
  "numpy",
  "xarray",
  "cftime",
  "scipy",
  "dask",
]

[project.urls]
Homepage = "https://github.com/y-tamura/tamfunc"